<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@mipmap/homescreen"
                tools:context="florianthompson.com.fyndr.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/lblApp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="53dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/lblSubtitle"
        android:textColor="@color/white"
        android:layout_below="@+id/lblApp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_input"
        android:layout_below="@+id/lblSubtitle"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="32dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="17sp"
            android:hint="@string/hint_email"
            android:id="@+id/textEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="17sp"
            android:hint="@string/hint_password"
            android:id="@+id/textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_in"
        android:id="@+id/btnSignIn"
        android:layout_below="@+id/layout_input"
        android:layout_alignLeft="@+id/layout_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:background="#0F0044"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookLogin"
        android:layout_marginTop="20dp"
        style="@style/Facebook_login_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_sign_up"
        android:id="@+id/textSignUp"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnFacebookLogin"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
