<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="florianthompson.com.fyndr.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sign_up_info"
        android:textSize="20sp"
        android:textColor="@color/text_dark"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/lblSubTitle"/>

    <LinearLayout
        android:id="@+id/layout_signUp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@id/lblSubTitle"
        android:layout_marginTop="32dp">

        <EditText
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="17sp"
            android:id="@+id/textUsername"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/textPassword"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="17sp"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/textEmail"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="17sp"/>

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        style="@style/Facebook_login_button"
        android:layout_below="@id/layout_signUp"
        android:layout_marginTop="12dp"
        />

</RelativeLayout>
